// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Text and media Image renders correctly 1`] = `
<jest>
  <article
    class="ecl-text-media"
  >
    <div
      class="ecl-text-media__content"
    >
      <div
        class="ecl-text-media__micro-title"
      >
        About
      </div>
      <div
        class="ecl-text-media__title"
        id="featured-item-example-title"
      >
        Non per curiositatem opinionum
      </div>
      <div
        class="ecl-text-media__description ecl-content-color"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
        <a
          class="ecl-link"
          href="#"
        >
          Sed do eiusmod
        </a>
         tempor incididunt ut labore et dolore magna aliqua. 
        <span
          class="ecl"
        >
          <a
            href="#"
          >
            Ut enim ad minim veniam.
          </a>
        </span>
      </div>
      <a
        aria-describedby="featured-item-example-title"
        class="ecl-link ecl-link--secondary-inverted ecl-link--icon ecl-text-media__link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Read more
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--arrow-left ecl-icon ecl-icon--m ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
        />
      </a>
    </div>
    <div
      class="ecl-text-media__media"
    >
      <div
        class="ecl-media-container ecl-media-container--caption-over ecl-text-media__media_container"
        data-ecl-auto-init="MediaContainer"
        data-ecl-media-container="true"
      >
        <figure
          class="ecl-media-container__figure"
        >
          <picture
            class="ecl-picture ecl-media-container__picture"
          >
            <img
              alt="Lorem ipsum dolor sit amet"
              class="ecl-media-container__media"
              src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
            />
          </picture>
          <figcaption
            class="ecl-media-container__caption"
          >
            Lorem ipsum dolor sit amet consectetur adipiscing.
          </figcaption>
          <footer
            class="ecl-media-container__credit"
          >
            @Copyright
          </footer>
        </figure>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Text and media Image renders correctly with extra attributes 1`] = `
<jest>
  <article
    class="ecl-text-media"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-text-media__content"
    >
      <div
        class="ecl-text-media__micro-title"
      >
        About
      </div>
      <div
        class="ecl-text-media__title"
        id="featured-item-example-title"
      >
        Non per curiositatem opinionum
      </div>
      <div
        class="ecl-text-media__description ecl-content-color"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
        <a
          class="ecl-link"
          href="#"
        >
          Sed do eiusmod
        </a>
         tempor incididunt ut labore et dolore magna aliqua. 
        <span
          class="ecl"
        >
          <a
            href="#"
          >
            Ut enim ad minim veniam.
          </a>
        </span>
      </div>
      <a
        aria-describedby="featured-item-example-title"
        class="ecl-link ecl-link--secondary-inverted ecl-link--icon ecl-text-media__link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Read more
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--arrow-left ecl-icon ecl-icon--m ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
        />
      </a>
    </div>
    <div
      class="ecl-text-media__media"
    >
      <div
        class="ecl-media-container ecl-media-container--caption-over ecl-text-media__media_container"
        data-ecl-auto-init="MediaContainer"
        data-ecl-media-container="true"
      >
        <figure
          class="ecl-media-container__figure"
        >
          <picture
            class="ecl-picture ecl-media-container__picture"
          >
            <img
              alt="Lorem ipsum dolor sit amet"
              class="ecl-media-container__media"
              src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
            />
          </picture>
          <figcaption
            class="ecl-media-container__caption"
          >
            Lorem ipsum dolor sit amet consectetur adipiscing.
          </figcaption>
          <footer
            class="ecl-media-container__credit"
          >
            @Copyright
          </footer>
        </figure>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Text and media Image renders correctly with extra class names 1`] = `
<jest>
  <article
    class="ecl-text-media custom-class custom-class--test"
  >
    <div
      class="ecl-text-media__content"
    >
      <div
        class="ecl-text-media__micro-title"
      >
        About
      </div>
      <div
        class="ecl-text-media__title"
        id="featured-item-example-title"
      >
        Non per curiositatem opinionum
      </div>
      <div
        class="ecl-text-media__description ecl-content-color"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
        <a
          class="ecl-link"
          href="#"
        >
          Sed do eiusmod
        </a>
         tempor incididunt ut labore et dolore magna aliqua. 
        <span
          class="ecl"
        >
          <a
            href="#"
          >
            Ut enim ad minim veniam.
          </a>
        </span>
      </div>
      <a
        aria-describedby="featured-item-example-title"
        class="ecl-link ecl-link--secondary-inverted ecl-link--icon ecl-text-media__link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Read more
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--arrow-left ecl-icon ecl-icon--m ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
        />
      </a>
    </div>
    <div
      class="ecl-text-media__media"
    >
      <div
        class="ecl-media-container ecl-media-container--caption-over ecl-text-media__media_container"
        data-ecl-auto-init="MediaContainer"
        data-ecl-media-container="true"
      >
        <figure
          class="ecl-media-container__figure"
        >
          <picture
            class="ecl-picture ecl-media-container__picture"
          >
            <img
              alt="Lorem ipsum dolor sit amet"
              class="ecl-media-container__media"
              src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image8.jpg"
            />
          </picture>
          <figcaption
            class="ecl-media-container__caption"
          >
            Lorem ipsum dolor sit amet consectetur adipiscing.
          </figcaption>
          <footer
            class="ecl-media-container__credit"
          >
            @Copyright
          </footer>
        </figure>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Text and media Video renders correctly 1`] = `
<jest>
  <article
    class="ecl-text-media"
  >
    <div
      class="ecl-text-media__content"
    >
      <div
        class="ecl-text-media__micro-title"
      >
        About
      </div>
      <div
        class="ecl-text-media__title"
        id="featured-item-example-title"
      >
        Non per curiositatem opinionum
      </div>
      <div
        class="ecl-text-media__description ecl-content-color"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
      </div>
      <a
        aria-describedby="featured-item-example-title"
        class="ecl-link ecl-link--secondary-inverted ecl-link--icon ecl-text-media__link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          Read more
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--arrow-left ecl-icon ecl-icon--m ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
        />
      </a>
    </div>
    <div
      class="ecl-text-media__media"
    >
      <div
        class="ecl-media-container ecl-media-container--caption-hidden ecl-text-media__media_container"
        data-ecl-auto-init="MediaContainer"
        data-ecl-media-container="true"
      >
        <figure
          class="ecl-media-container__figure"
        >
          <div
            class="ecl-media-container__video-wrapper"
          >
            <video
              aria-label="Visit the European Commission - Video player"
              class="ecl-video ecl-media-container__media"
              controls=""
              data-ecl-media-container-video=""
              playsinline=""
              poster="https://vod.prd.commavservices.eu/12/224712/THUMB_I224712EN1W_V_1.jpg"
            >
              <source
                src="https://vod.prd.commavservices.eu/01/275521/019813ec-13ce-7136-ac0d-d7e24fec64c0/1080p-qaa.mp4"
                type="video/mp4"
              />
            </video>
          </div>
          <figcaption
            class="ecl-media-container__caption"
          >
            Lorem ipsum dolor sit amet consectetur adipiscing.
          </figcaption>
          <footer
            class="ecl-media-container__credit"
          >
            @Copyright
          </footer>
        </figure>
      </div>
    </div>
  </article>
</jest>
`;
